[package]
name = "scoreboard"
version = "0.1.0"
edition = "2021"
authors = ["Shane Poppleton <shane@bjja.com.au>"]
description = "BJJ Scoreboard Application"
license = "GPL-3.0-or-later"
repository = "https://github.com/codemonkey76/scoreboard"

[dependencies]
directories = "5.0.1"
egui-multiwin = "0.1.7"
egui_extras = "0.22.0"
fake = "2.6.1"
rand = "0.8.5"
serde = { version = "1.0.171", features = ["derive"] }
toml = "0.7.6"
